todo listo por aqui
